# gleplot

./: .gitattributes  .gitignore  AXES_TOUCHING.md  CLAUDE.md  CONFIG_SYSTEM_SUMMARY.md  LICENSE  README.md  SHARED_AXES_IMPROVEMENT.md  generate_test_graphics.py  pyproject.toml  test_custom_prefix.py
.github/workflows/: preview-macos-arm.yml  preview-windows.yml  publish_docs.yml  release-binaries.yml  release.yml  test.yml  version.yml
docs/: CHANGELOG.md  DOCUMENTATION_INDEX.md  Makefile  SEMANTIC_VERSIONING_IMPLEMENTATION.md  VERSIONING.md  make.bat  requirements.txt
docs/agent/: LOCAL_DEVELOPMENT.md  MARKER_SIZE_FIX.md  README.md  TOUCHING_SUBPLOTS.md
docs/guides/: COLORS_AND_MARKERS.md  CONFIGURATION.md  CONFIGURATION_API.md  CONTOUR_AND_HEATMAPS.md  DEVELOPMENT_WORKFLOW.md  FILE_BASED_SERIES.md  GRAPHICS_TESTING.md  GRAPHICS_TESTING_COMPLETE.md  GRAPHICS_TESTING_SUMMARY.md  GUI_EDITOR.md  MATPLOTLIB_MIGRATION.md  README.md  TESTING_QUICK_REFERENCE.md  TEST_STRUCTURE.md  TEXT_ANNOTATIONS.md  TROUBLESHOOTING.md  VERSIONING.md  VERSIONING_QUICK_REF.md  VIEW_FUNCTION.md
docs/source/: api.rst  conf.py  contributing.rst  examples.rst  gallery.rst  getting_started.rst  gui.rst  index.rst  usage.rst
examples/: __init__.py  example_configuration.py  example_errorbar_from_file.gle  example_versioning_workflow.py  example_view.py  example_view_notebook.ipynb  gleplot_examples.py  run_all.py  run_and_compile.py
examples/advanced/: __init__.py  batch_figures.py  combined_plots.py  data_prefix.py  errorbar_from_file.py  example_dual_axis_from_file.gle  example_phase_diagram.gle  fill_between.py  line_from_file.py  log_scale.py  multiple_styles.py  per_element_styling.py  phase_diagram.py  secondary_yaxis.py  secondary_yaxis_circuit.gle  secondary_yaxis_errorbar.gle  secondary_yaxis_growth.gle  secondary_yaxis_temp_humidity.gle  shared_axes.py  subplots.py  text_annotations.py
examples/basic/: __init__.py  bar_charts.py  data_contour1.z  error_bars.py  example_heatmap_imshow.gle  heatmap_imshow.py  line_plots.py  scatter_plots.py
examples/gui/: README.md  damped_oscillation.csv  damped_oscillation.gle  damped_oscillation.glep
packaging/: README.md  gleplot.spec  macos_icon.py
packaging/macos/: dmg_settings.py
packaging/windows/: gleplot.iss
scripts/: build_dmg_background.py  bump_version.py
src/gleplot/: __init__.py  axes.py  colors.py  compiler.py  config.py  dataio.py  figure.py  markers.py  mathtext.py  palettes.py  project.py  writer.py
test_graphics_output/: README.md  test_01_line_plot.gle  test_02_scatter.gle  test_03_bar_chart.gle  test_04_error_bars.gle  test_05_fill_between.gle  test_06_log_scale.gle  test_07_subplots_basic.gle  test_08_shared_x_axis.gle  test_09_shared_y_axis.gle  test_10_shared_both.gle  test_11_complex_combined.gle
tests/: __init__.py  _tempdir.py  test_gleplot.py
tests/agent/: README.md  __init__.py  custom_prefix_test.py
tests/gui/: conftest.py  test_annotation_sync.py  test_annotations.py  test_app.py  test_broken_series.py  test_calibration_integration.py  test_data_loader.py  test_data_panel.py  test_document.py  test_error_panel.py  test_export_dialog.py  test_file_ops.py  test_geometry.py  test_gle_setup.py  test_gle_viewer.py  test_header_editing.py  test_panels.py  (+10 more)
(+68 files in other folders)
